--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,11 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1",
-    "jsonwebtoken": "^8.5.1"
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
