--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
