--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.4.1"
