--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
