--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "lolinfo",
   "version": "1.0.0",
   "description": "lolinfo - server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
